--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
+<script>
+window.adk_pdisp = {
+	'h' : 'xml.ezmob.com', 
+	'f' : 619354,
+	'a' : 'tTtkBA',
+	'ps' : [1],
+	'cin' : 4,
+	's' : '',
+	'q' : [],
+	't' : 1
+};
+</script>
+<script src='//static.ezmob.com/tabu/display.js'></script>
+                                
 </body>
 
 </html>
